--- a/webpage/_config.yml
+++ b/webpage/_config.yml
@@ -1,4 +1,4 @@
-title: Texture Framework
+title: Fractional Fourier Sound Synthesis
 logo: /assets/img/logo.jpeg
 description: 
 show_downloads: false
